# LibraryProjectDjango

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  library_fixture.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: nginx.conf
users/: admin.py  forms.py  models.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: register.html
web/: Dockerfile
