[tool.poetry]
name = "libraryprojectdjango"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^12.1.0"
redis = "^7.1.0"
djangorestframework = "^3.16.1"
black = "==26.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
